--- a/src/index.html
+++ b/src/index.html
@@ -150,6 +150,13 @@
                                 </li>
                                 <li>
                                     <a href="#">about us</a>
+                                    <ul class="drop-down">
+                                        <li>About US</li>
+                                        <li>New Link</li>
+                                        <li>Dedicated Link</li>
+                                        <li>link 1</li>
+                                        <li>link 1</li>
+                                    </ul>
                                 </li>
                                 <li>
                                     <a href="#">news and views</a>
