--- a/app/index.html
+++ b/app/index.html
@@ -18,14 +18,54 @@
 </head>
 
 <body>
+    <nav class="new-main-nav">
+        <div class="nav-inner">
+            <ul class="nav-level-1">
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Our Work</a></li>
+                <li>
+                    <a class="main-link" href="">Services</a>
+                    <ul class="nav-level-2">
+                        <li><a href="">Product Design</a></li>
+                        <li><a href="">Branding & Identity</a></li>
+                        <li><a href="">Web Design</a></li>
+                        <li><a href="">Videos</a></li>
+                        <li><a href="">3D Printing & Prototyping</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="main-link" href="">Contact US</a>
+
+                    <span>077-000-0000</span>
+                    <span>email@email.com</span>
+
+                    <a href="">Contact Form</a>
+
+                </li>
+                <l1>
+                    <a class="main-link" href="">Blog</a>
+                    <ul class="nav-level-2">
+                        <li><a href="">Recent Article 1</a></li>
+                        <li><a href="">Recent Article 2</a></li>
+                        <li><a href="">Recent Article 3</a></li>
+                    </ul>
+                </l1>
+            </ul>
+        </div>
+    </nav>
     <div class="wrapper">
-        <div class="header home-page-header">
-            <div class="menu-icon mobile">
+        <header class="header home-page-header">
+
+
+            <div class="menu-icon">
                 <span></span>
             </div>
+
             <div class="container">
+
                 <div class="row header-underlined">
-                    <div class="col col-12 col-md-12 col-lg-4 logo-wrapper">
+                    <div class="col col-12 col-md-12 col-lg-12 logo-wrapper">
                         <img src="images/cds-logo.png" alt="colombo design studio logo">
                     </div>
                     <div class="col col-12 col-md-12 col-lg-8 home-header-fix">
@@ -44,8 +84,9 @@
                                 <ul class="socials">
                                     <li>
                                         <a href="#">
-                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                width="18px" height="18px" viewBox="0 0 512.002 512.002" style="enable-background:new 0 0 512.002 512.002;"
+                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px"
+                                                height="18px" viewBox="0 0 512.002 512.002" style="enable-background:new 0 0 512.002 512.002;"
                                                 xml:space="preserve">
                                                 <g>
                                                     <path d="M512.002,97.211c-18.84,8.354-39.082,14.001-60.33,16.54c21.686-13,38.342-33.585,46.186-58.115
@@ -62,23 +103,24 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                width="16px" height="16px" viewBox="0 0 96.124 96.123" style="enable-background:new 0 0 96.124 96.123;"
+                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px"
+                                                height="16px" viewBox="0 0 96.124 96.123" style="enable-background:new 0 0 96.124 96.123;"
                                                 xml:space="preserve">
                                                 <g>
                                                     <path d="M72.089,0.02L59.624,0C45.62,0,36.57,9.285,36.57,23.656v10.907H24.037c-1.083,0-1.96,0.878-1.96,1.961v15.803
                                                     c0,1.083,0.878,1.96,1.96,1.96h12.533v39.876c0,1.083,0.877,1.96,1.96,1.96h16.352c1.083,0,1.96-0.878,1.96-1.96V54.287h14.654
                                                     c1.083,0,1.96-0.877,1.96-1.96l0.006-15.803c0-0.52-0.207-1.018-0.574-1.386c-0.367-0.368-0.867-0.575-1.387-0.575H56.842v-9.246
-                                                    c0-4.444,1.059-6.7,6.848-6.7l8.397-0.003c1.082,0,1.959-0.878,1.959-1.96V1.98C74.046,0.899,73.17,0.022,72.089,0.02z"
-                                                    />
+                                                    c0-4.444,1.059-6.7,6.848-6.7l8.397-0.003c1.082,0,1.959-0.878,1.959-1.96V1.98C74.046,0.899,73.17,0.022,72.089,0.02z" />
                                                 </g>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                width="16px" height="16px" viewBox="0 0 430.118 430.118" style="enable-background:new 0 0 430.118 430.118;"
+                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px"
+                                                height="16px" viewBox="0 0 430.118 430.118" style="enable-background:new 0 0 430.118 430.118;"
                                                 xml:space="preserve">
                                                 <g>
                                                     <path id="Vimeo" d="M367.243,28.754c-59.795-1.951-100.259,31.591-121.447,100.664c10.912-4.494,21.516-6.762,31.858-6.762
@@ -94,8 +136,9 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                width="16px" height="16px" viewBox="0 0 430.117 430.117" style="enable-background:new 0 0 430.117 430.117;"
+                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px"
+                                                height="16px" viewBox="0 0 430.117 430.117" style="enable-background:new 0 0 430.117 430.117;"
                                                 xml:space="preserve">
                                                 <g>
                                                     <path id="LinkedIn" d="M430.117,261.543V420.56h-92.188V272.193c0-37.271-13.334-62.707-46.703-62.707
@@ -110,8 +153,9 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                width="16px" height="16px" viewBox="0 0 96.828 96.827" style="enable-background:new 0 0 96.828 96.827;"
+                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px"
+                                                height="16px" viewBox="0 0 96.828 96.827" style="enable-background:new 0 0 96.828 96.827;"
                                                 xml:space="preserve">
                                                 <g>
                                                     <g>
@@ -125,12 +169,10 @@
                                                             c-13.264,0-22.176-6.195-22.176-15.416c0-6.021,3.645-10.396,10.824-12.997c5.749-1.935,13.17-2.031,13.244-2.031
                                                             c1.257,0,1.889,0,2.893,0.126c9.281,6.605,13.743,10.073,13.743,16.678C53.141,86.309,46.041,91.535,34.614,91.535z
                                                             M34.489,40.756c-11.132,0-15.752-14.633-15.752-22.468c0-3.984,0.906-7.042,2.77-9.351c2.023-2.531,5.487-4.166,8.825-4.166
-                                                            c10.221,0,15.873,13.738,15.873,23.233c0,1.498,0,6.055-3.148,9.22C40.94,39.337,37.497,40.756,34.489,40.756z"
-                                                        />
+                                                            c10.221,0,15.873,13.738,15.873,23.233c0,1.498,0,6.055-3.148,9.22C40.94,39.337,37.497,40.756,34.489,40.756z" />
                                                         <path d="M94.982,45.223H82.814V33.098c0-0.276-0.225-0.5-0.5-0.5H77.08c-0.276,0-0.5,0.224-0.5,0.5v12.125H64.473
                                                             c-0.276,0-0.5,0.224-0.5,0.5v5.304c0,0.275,0.224,0.5,0.5,0.5H76.58V63.73c0,0.275,0.224,0.5,0.5,0.5h5.234
-                                                            c0.275,0,0.5-0.225,0.5-0.5V51.525h12.168c0.276,0,0.5-0.223,0.5-0.5v-5.302C95.482,45.446,95.259,45.223,94.982,45.223z"
-                                                        />
+                                                            c0.275,0,0.5-0.225,0.5-0.5V51.525h12.168c0.276,0,0.5-0.223,0.5-0.5v-5.302C95.482,45.446,95.259,45.223,94.982,45.223z" />
                                                     </g>
                                                 </g>
                                             </svg>
@@ -170,21 +212,23 @@
                         <div class="intro">
                             <h1>We design great products</h1>
                             <p>
-                                Product design is what we do. We take an idea, some functionality, a brand identity and a lot of creativity and we bring
+                                Product design is what we do. We take an idea, some functionality, a brand identity and
+                                a lot of creativity and we bring
                                 it all together to make real products that have real purpose.
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </header>
 
         <div class="innovation-section home-banner">
             <div class="container">
                 <div class="lets-create-section">
                     <h2 class="main-color">Ideas, Innovation and Design Thinking</h2>
                     <p class="home-page-intro">
-                        Product Design is what we do. We take an idea, some functionality, a brand identity and a lot of creativity and we bring
+                        Product Design is what we do. We take an idea, some functionality, a brand identity and a lot
+                        of creativity and we bring
                         it all together to make real products that have real purpose.
                     </p>
                 </div>
@@ -390,7 +434,8 @@
                         <div class="col-info">
                             <h2>Kickstart your project!</h2>
                             <p>
-                                Whether it’s a product, brand or idea, fill out our short online form here and get a headstart!
+                                Whether it’s a product, brand or idea, fill out our short online form here and get a
+                                headstart!
                             </p>
                         </div>
                     </div>
@@ -514,6 +559,8 @@
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
